--- a/app/src/main/res/layout/bookmark_item.xml
+++ b/app/src/main/res/layout/bookmark_item.xml
@@ -46,7 +46,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:contentDescription="@string/imageContent"
-            android:src="@drawable/ic_launcher" />
+            android:src="@mipmap/ic_launcher" />
     </LinearLayout>
     
 </LinearLayout>
